--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "listtolean"
 version = "0.1.0"
+license = "MIT"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tracing = "0.1"
+tracing-subscriber = "0.3.0"
+color-eyre = "0.6"
+crossterm = "0.28.1"
+ratatui = "0.29.0"
