--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "listtolean"
+name = "pollux_console"
 version = "0.1.0"
-license = "MIT"
+license = "BSD-3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
