--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ color-eyre = "0.6"
 crossterm = "0.28.1"
 get_if_addrs = "0.5.3"
 ratatui = "0.29.0"
-
+tokio = { version = "1.0", features = ["full"] }
+tokio-stream = "0.1"
 
